--- a/index.html
+++ b/index.html
@@ -1016,6 +1016,7 @@ let RAW = [
   {w:'春の草',k:'はるのくさ',s:'春',p:'三春',c:'植物'},
   {w:'春椎茸',k:'はるしいたけ',s:'春',p:'三春',c:'植物'},
   {w:'海髪',k:'うごのり',s:'春',p:'三春',c:'植物'},
+  {w:'春の蜜柑',k:'はるのみかん',s:'春',p:'三春',c:'植物'},
   // 初春・時候
   {w:'立春',k:'りっしゅん',s:'春',p:'初春',c:'時候'},
   {w:'早春',k:'そうしゅん',s:'春',p:'初春',c:'時候'},
@@ -1033,7 +1034,7 @@ let RAW = [
   {w:'二月尽',k:'にがつじん',s:'春',p:'初春',c:'時候'},
   // 初春・地理
   {w:'焼野',k:'やけの',s:'春',p:'初春',c:'地理'},
-  {w:'薄氷',k:'うすらい',s:'春',p:'初春',c:'地理'},
+  {w:'薄氷',k:'うすらい／うすごおり',s:'春',p:'初春',c:'地理'},
   // 初春・生活
   {w:'蕗味噌',k:'ふきみそ',s:'春',p:'初春',c:'生活'},
   {w:'鶯餅',k:'うぐいすもち',s:'春',p:'初春',c:'生活'},
@@ -1296,6 +1297,7 @@ let RAW = [
   // 晩春・行事
   {w:'昭和の日',k:'しょうわのひ',s:'春',p:'晩春',c:'行事'},
   {w:'みどりの日',k:'みどりのひ',s:'春',p:'晩春',c:'行事'},
+  {w:'ゴールデンウィーク',k:'ごーるでんうぃーく',s:'春',p:'晩春',c:'行事'},
   {w:'メーデー',k:'めーでー',s:'春',p:'晩春',c:'行事'},
   {w:'仏生会',k:'ぶっしょうえ',s:'春',p:'晩春',c:'行事'},
   {w:'復活祭',k:'ふっかつさい',s:'春',p:'晩春',c:'行事'},
@@ -2201,7 +2203,7 @@ let RAW = [
   {w:'松葉牡丹',k:'まつばぼたん',s:'夏',p:'晩夏',c:'植物'},
   {w:'仙人掌の花',k:'さぼてんのはな',s:'夏',p:'晩夏',c:'植物'},
   {w:'百日草',k:'ひゃくにちそう',s:'夏',p:'晩夏',c:'植物'},
-  {w:'青鬼灯',k:'あおほほづき',s:'夏',p:'晩夏',c:'植物'},
+  {w:'青鬼灯',k:'あおほおずき',s:'夏',p:'晩夏',c:'植物'},
   {w:'芭蕉の花',k:'ばしょうのはな',s:'夏',p:'晩夏',c:'植物'},
   {w:'独活の花',k:'うどのはな',s:'夏',p:'晩夏',c:'植物'},
   {w:'韮の花',k:'にらのはな',s:'夏',p:'晩夏',c:'植物'},
@@ -3418,7 +3420,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "五加木":["むこぎ","五加","五加木垣","五加木飯"],
 "海髪":["おご","おごのり"],
 "牛蛙":["食用蛙"],
-"薄氷":["薄氷","春の氷","残る氷"],
+"薄氷":["春の氷","残る氷"],
 "鷽":["琴弾鳥","照鷽","雨鷽","鷽姫"],
 "独活":["芋独活","山独活","もやし独活","独活掘る"],
 "海胆":["雲丹","海栗"],
@@ -3439,6 +3441,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "苧環の花":["苧環","いとくり","糸繰草"],
 "御告祭":["告知祭","受胎告知日","聖母祭"],
 "落し角":["鹿の角落つ","忘れ角"],
+"朧":["草朧","岩朧","谷朧","灯朧","鐘朧","朧影","朧めく"],
 "朧月":["月朧","朧夜","朧月夜"],
 "お水取":["水取","若狭の井"],
 "蚕":["蚕","春蚕","捨蚕","桑子","毛蚕","蚕時雨"],
@@ -3498,6 +3501,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "桑":["桑の芽","芽桑","桑の花"],
 "桑摘":["桑摘女","桑摘唄","桑籠","桑車"],
 "桑解く":["桑ほどく"],
+"獣交る":["獣交る","種つけ","種かけ","種馬","種牛","種豚"],
 "華鬘草":["華鬘牡丹","けまん","瓔珞牡丹","藤牡丹","鯛釣草"],
 "建国記念の日":["建国の日","建国祭","紀元節"],
 "紫雲英":["蓮華草","げんげん","五形花"],
@@ -3701,6 +3705,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "春田":["春の田","げんげ田","花田"],
 "春たのし":["春愉し"],
 "春大根":["三月大根","二年子大根"],
+"春の蜜柑":["伊予柑","ネーブル","八朔","八朔柑","三宝柑"],
 "春暖炉":["春の暖炉","春ストーブ"],
 "春の霰":["春霰"],
 "春の馬":["春の駒","若駒","馬の子","孕馬"],
@@ -3837,13 +3842,13 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "吉野の花会式":["吉野の会式","花会式","鬼踊","餅配"],
 "嫁菜":["萩菜","よめがはぎ","嫁菜飯"],
 "蓬":["餅草","艾草","さしも草","蓬生","蓬摘む"],
-"ライラック":["リラの花"],
+"ライラック":["リラの花","リラ冷え"],
 "落花":["散る桜","花吹雪","飛花","花散る","花屑","花の塵","紅雨","花筏"],
 "利休忌":["利久忌","宗易忌"],
 "立春":["春立つ","春来る","立春大吉"],
 "柳絮":["柳の絮","柳の花","柳絮飛ぶ"],
 "龍天に昇る":["竜天に登る"],
-"流氷":["氷流る","流氷期"],
+"流氷":["氷流る","流氷期","流氷盤","海明"],
 "林檎の花":["花林檎"],
 "連翹":["いたちぐさ"],
 "蓮如忌":["中宗会","吉崎詣","蓮如輿"],
