--- a/index.html
+++ b/index.html
@@ -5274,7 +5274,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "初湯":["初風呂","湯殿始"],
 "初夢":["貘枕","初寝覚"],
 "初漁":["漁始","初網"],
-"花弁餅":["菱葩餅、菱はなびら"],
+"花弁餅":["菱葩餅","菱はなびら"],
 "羽子つき":["羽子","追羽子","揚羽子","遣羽子"],
 "破魔弓":["破魔矢"],
 "春着":["正月小袖","春襲","春小袖"],
