--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
     <!-- 読み込みセクション -->
     <div style="font-size:12px;font-weight:bold;color:var(--sumi-faint);letter-spacing:.05em;margin-bottom:10px;padding-top:16px;border-top:1px solid var(--washi-dark)">▼ JSONから読み込む</div>
     <p style="font-size:12px;color:var(--sumi-faint);margin:0 0 10px;line-height:1.7">
-      以前に保存したJSONファイルを読み込むと、<strong>現在のデータに追加・上書き</strong>されます。
+      以前に保存したJSONファイルを読み込むと","<strong>現在のデータに追加・上書き</strong>されます。
     </p>
     <div style="display:flex;gap:8px;align-items:center">
       <label style="flex:1;display:flex;align-items:center;gap:8px;border:1.5px dashed #b0a090;border-radius:8px;padding:10px 14px;cursor:pointer;font-size:13px;color:var(--sumi-faint);transition:border-color .15s" id="importLabel">
@@ -3685,7 +3685,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "紫荊":["すはうばな","花蘇枋","花蘇芳"],
 "花大根":["諸葛菜","大あらせいとう"],
 "花種蒔く":["朝顔蒔く"],
-"花韮":["西洋甘菜、スプリングスターフラワー"],
+"花韮":["西洋甘菜","スプリングスターフラワー"],
 "花見":["観桜","桜狩","花の宴","花筵","花見酒","花見客","花見人","花人"],
 "花守":["桜守","花の主"],
 "母子草":["鼠麹草","ははこ","おぎやう","ごぎやう"],
@@ -4006,7 +4006,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "金銀蓮花":["鏡蓋"],
 "ががんぼ":["蚊蜻蛉","蚊の姥","大蚊"],
 "額の花":["額紫陽花"],
-"がまずみの花":["莢迷（がまずみ）の花、鎌酸実（がまずみ）の花"],
+"がまずみの花":["莢迷（がまずみ）の花","鎌酸実（がまずみ）の花"],
 "蒲の穂":["蒲の花","蒲","御簾草"],
 "喜雨":["雨喜び"],
 "菊挿す":["菊挿芽","挿菊"],
@@ -4088,7 +4088,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "五月雨":["五月雨","さみだる"],
 "晒井":["井戸替","井戸浚"],
 "沙羅の花":["夏椿","あからぎ","さるなめ","姫沙羅"],
-"松蘿":["猿麻桛、さがりごけ"],
+"松蘿":["猿麻桛","さがりごけ"],
 "百日紅":["百日紅","白さるすべり","さるすべり"],
 "サルビア":["緋衣草"],
 "山椒魚":["はんざき"],
@@ -4300,7 +4300,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "羽抜鳥":["羽抜鶏"],
 "帚木":["ははきぐさ"],
 "はまごう":["はまぼう"],
-"玫瑰":["浜梨、玫瑰の実、実玫瑰"],
+"玫瑰":["浜梨","玫瑰の実","実玫瑰"],
 "浜防風":["防風"],
 "浜木綿の花":["浜万年青"],
 "鱧":["水鱧","鱧の皮"],
@@ -4524,7 +4524,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "占地":["湿地","しめぢ茸"],
 "秋海棠":["断腸花"],
 "秋思":["秋あはれ","秋さびし","傷秋","秋意"],
-"秋雪":["秋の雪、秋の初雪"],
+"秋雪":["秋の雪","秋の初雪"],
 "終戦記念日":["終戦日","敗戦日","敗戦忌","八月十五日"],
 "生姜":["新生姜","葉生姜","薑"],
 "生姜市":["だらだらまつり"],
