--- a/index.html
+++ b/index.html
@@ -1574,7 +1574,7 @@ let RAW = [
   {w:'白玉',k:'しらたま',s:'夏',p:'三夏',c:'生活'},
   {w:'蜜豆',k:'みつまめ',s:'夏',p:'三夏',c:'生活'},
   {w:'麨',k:'はったい',s:'夏',p:'三夏',c:'生活'},
-  {w:'洗膾',k:'あらひ',s:'夏',p:'三夏',c:'生活'},
+  {w:'洗膾',k:'あらい',s:'夏',p:'三夏',c:'生活'},
   {w:'泥鰌鍋',k:'どじょうなべ',s:'夏',p:'三夏',c:'生活'},
   {w:'沖膾',k:'おきなます',s:'夏',p:'三夏',c:'生活'},
   {w:'水貝',k:'みずがい',s:'夏',p:'三夏',c:'生活'},
@@ -2095,7 +2095,7 @@ let RAW = [
   {w:'虫干',k:'むしぼし',s:'夏',p:'晩夏',c:'生活'},
   {w:'打水',k:'うちみず',s:'夏',p:'晩夏',c:'生活'},
   {w:'避暑',k:'ひしょ',s:'夏',p:'晩夏',c:'生活'},
-  {w:'川床',k:'かわどこ',s:'夏',p:'晩夏',c:'生活'},
+  {w:'川床',k:'かわどこ／ゆか',s:'夏',p:'晩夏',c:'生活'},
   {w:'登山',k:'とざん',s:'夏',p:'晩夏',c:'生活'},
   {w:'キャンプ',k:'きゃんぷ',s:'夏',p:'晩夏',c:'生活'},
   {w:'海水浴',k:'かいすいよく',s:'夏',p:'晩夏',c:'生活'},
@@ -2880,7 +2880,6 @@ let RAW = [
   {w:'重ね着',k:'かさねぎ',s:'冬',p:'三冬',c:'生活'},
   {w:'セーター',k:'せーたー',s:'冬',p:'三冬',c:'生活'},
   {w:'外套',k:'がいとう',s:'冬',p:'三冬',c:'生活'},
-  {w:'マフラー',k:'まふらー',s:'冬',p:'三冬',c:'生活'},
   {w:'手袋',k:'てぶくろ',s:'冬',p:'三冬',c:'生活'},
   {w:'マスク',k:'ますく',s:'冬',p:'三冬',c:'生活'},
   {w:'ホットドリンクス',k:'ほっとどりんくす',s:'冬',p:'三冬',c:'生活'},
@@ -3485,7 +3484,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "球根植う":["ダリア植う","百合植う"],
 "旧正月":["旧正","春節"],
 "競漕":["レガッタ"],
-"曲水":["曲水の宴","曲水","流觴","盃流し"],
+"曲水":["曲水の宴","流觴","盃流し"],
 "虚子忌":["椿寿忌"],
 "金盞花":["常春花","長春花"],
 "金鳳花":["さんぽうげ","馬の脚形","駒の脚形"],
@@ -3996,7 +3995,8 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "空梅雨":["旱梅雨"],
 "軽鳧の子":["軽鴨の子"],
 "川狩":["投網","川干","毒流し","かへぼり","瀬干し"],
-"翡翠":["川蝉","せうびん","翡翠"],
+"翡翠":["川蝉","せうびん"],
+"川床":["床","川床涼み","納涼川床","川床座敷","川床料理"],
 "川蜻蛉":["おはぐろとんぼ","おはぐろ","かねつけ蜻蛉"],
 "川開":["両国の川開"],
 "萱草の花":["ひるな","花萱草","忘草","藪萱草"],
@@ -4047,14 +4047,14 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "黒南風":["白南風"],
 "桑の実":["桑いちご"],
 "グラジオラス":["唐菖蒲","和蘭あやめ"],
-"競渡":["ペーロン","ペーロン船","ハーリー","爬竜船"],
+"ペーロン":["競渡","ペーロン船","ハーリー","爬竜船"],
 "罌栗の花":["芥子の花","花罌栗","芥子"],
 "罌栗坊主":["芥子坊主","罌栗の実"],
 "毛虫":["毛虫焼く"],
 "現の証拠":["神輿草"],
 "原爆忌":["原爆の日","広島忌","長崎忌"],
 "鯉幟":["五月鯉","吹流し","矢車"],
-"香水":["掛香","オーデコロン"],
+"香水":["掛香","オーデコロン","オードトワレ","香水瓶"],
 "蝙蝠":["かはほり","蚊喰鳥"],
 "氷水":["削氷","かき氷","夏氷","氷小豆","氷苺","氷店"],
 "金亀子":["黄金虫","かなぶん","ぶんぶん","ぶんぶん虫"],
@@ -4223,7 +4223,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "夏シャツ":["白シャツ","開襟シャツ","アロハシャツ"],
 "夏足袋":["単足袋"],
 "夏大根":["なつだいこ"],
-"夏手袋":["網手袋","レース手袋"],
+"夏手袋":["夏手套","網手袋","レース手袋"],
 "夏葱":["刈葱"],
 "夏野":["夏野原","青野"],
 "夏の暁":["夏暁","夏の夜明","夏の朝","夏未明"],
@@ -4304,6 +4304,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "浜木綿の花":["浜万年青"],
 "鱧":["水鱧","鱧の皮"],
 "葉柳":["夏柳","柳茂る"],
+"ハンカチ":["ハンカチーフ","ハンケチ","汗拭ひ"],
 "半夏生":["半夏","半夏雨"],
 "半夏生草":["片白草"],
 "半ズボン":["短パン","ショートパンツ"],
@@ -4329,8 +4330,11 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "姫女宛":["柳葉姫菊","鉄道草"],
 "日焼":["潮焼"],
 "氷菓":["氷菓子","アイスキャンデー","アイスクリーム","ソフトクリーム","シャーベット","ジェラート"],
+"風鈴":["江戸風鈴","南部風鈴","貝風鈴","風鈴売"],
 "蜜柑の花":["花蜜柑"],
+"南風":["南風（みなみ）","正南風（まみなみ）","海南風","大南風","南吹く"],
 "夕立":["ゆだち","白雨","驟雨","夕立雲","夕立風","スコール","片降"],
+"昼寝":["昼寝覚","三尺寝"],
 "冷酒":["冷し酒"],
 "若葉":["谷若葉","里若葉","山若葉","若葉風","若葉雨","若葉寒","若葉冷"],
 "赤い羽根":["愛の羽根"],
@@ -4409,7 +4413,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "隠元豆":["花ささげ","千石豆","味豆"],
 "雨月":["雨名月","雨の月","月の雨"],
 "大秦の牛祭":["牛祭"],
-"鶉":["鶉篭"],
+"鶉":["鶉籠"],
 "馬追":["すいつちょ","すいと","馬追虫"],
 "馬肥ゆ":["秋の馬","秋の駒"],
 "梅擬":["落霜紅","梅嫌"],
@@ -4426,7 +4430,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "落鮎":["錆鮎","渋鮎","下り鮎","子持鮎","秋の鮎"],
 "落穂":["落穂拾ひ"],
 "落し水":["水落す","田水落す","堰外す"],
-"囮":["囮番","囮守","囮篭"],
+"囮":["囮番","囮守","囮籠"],
 "踊":["盆踊","踊子","踊笠","踊太鼓","踊唄","踊櫓"],
 "鬼貫忌":["槿花扇忌"],
 "面輪板":["星の貸物","貸し小袖"],
@@ -4560,7 +4564,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "台風":["颱風","颱風圏","颱風裡","颱風禍","颱風の眼"],
 "高きに登る":["登高"],
 "鷹渡る":["落鷹","鷹柱","はぐれ鷹"],
-"茸狩":["茸狩","茸とり","菌狩","茸篭","茸筵","茸山"],
+"茸狩":["茸狩","茸とり","菌狩","茸籠","茸筵","茸山"],
 "立待月":["立待","十七夜"],
 "蓼の花":["蓼の穂","穂蓼","大毛蓼"],
 "七夕":["七夕祭","星祭","星合","星迎","星今宵","二星","牽牛","織女","七夕竹","七夕流し","願ひの糸","七夕雨","洗車雨"],
@@ -4779,7 +4783,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "牡蠣":["真牡蠣","酢牡蠣","牡蠣飯"],
 "牡蠣船":["牡蠣料理","牡蠣鍋"],
 "牡蠣剥く":["牡蠣割る","牡蠣割女"],
-"杜父魚":["杜夫魚","霰魚","杜父魚","あられがこ"],
+"杜父魚":["杜夫魚","霰魚","杜父魚（とふぎょ）","あられがこ"],
 "神楽":["御神楽","神楽歌","夜神楽","神遊び","庭燎"],
 "重ね着":["厚着"],
 "風花":["吹越"],
@@ -4847,7 +4851,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "寒参":["寒詣","裸参"],
 "寒見舞":["寒中見舞","雪見舞"],
 "寒林":["寒木"],
-"外套":["オーバー","コート"],
+"外套":["オーバー","コート","オーバーコート","被布","東コート"],
 "北風":["冬の風","朔風","寒風","北吹く"],
 "北窓塞ぐ":["北塞ぐ"],
 "狐火":["鬼火","狐の提灯"],
@@ -4893,6 +4897,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "霜月":["霜降月"],
 "霜焼":["凍傷","霜腫"],
 "社会鍋":["慈善鍋"],
+"ジャンパー":["ブルゾン","皮ジャンパー"],
 "正月事始":["事始"],
 "障子":["冬障子","腰障子","明り障子"],
 "ショール":["肩掛"],
@@ -4908,9 +4913,9 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "鋤焼":["牛鍋","馬肉鋤","桜鍋"],
 "スキー":["スキー場","スキーヤー","ゲレンデ","シャンツェ"],
 "スケート":["氷滑り","スケート場"],
-"煤払":["煤掃","煤竹","煤篭","煤湯"],
+"煤払":["煤掃","煤竹","煤籠","煤湯"],
 "ストーブ":["暖炉","ペチカ"],
-"炭":["炭火","埋火","消炭","炭斗","炭篭","炭売","炭屋","炭俵"],
+"炭":["炭火","埋火","消炭","炭斗","炭籠","炭売","炭屋","炭俵"],
 "炭焼":["炭焼小屋","炭焼竃","炭竃"],
 "青畝忌":["万両忌"],
 "咳":["咳く","しはぶき"],
@@ -4929,7 +4934,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "狸":["たのき","むじな"],
 "足袋":["白足袋","色足袋"],
 "玉子酒":["卵酒"],
-"鱈":["雪魚","真鱈","助宗鱈","鱈場","鱈船","子持鱈","鱈汁"],
+"鱈":["雪魚","真鱈","助宗鱈","介党鱈","鱈場","鱈船","子持鱈","鱈汁"],
 "短日":["日短","日短し","暮早し","暮易し"],
 "探梅":["梅探る","探梅行"],
 "大寒":["寒土用"],
@@ -4948,11 +4953,11 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "冷たし":["底冷"],
 "氷柱":["垂氷","草氷柱","軒氷柱","氷笋"],
 "鶴":["凍鶴","冬の鶴"],
-"手袋":["皮手袋"],
+"手袋":["手套","皮手袋"],
 "冬至":["冬至粥","冬至南瓜"],
 "年木樵":["節木樵","年木積む","年木売"],
 "年越":["年を越す"],
-"年篭":["年籠"],
+"年籠":["年籠"],
 "年の内":["年内"],
 "年の暮":["歳暮","歳晩","歳末","年末","年歩む","年の瀬","年の果","年暮るる"],
 "年用意":["春支度"],
@@ -5059,7 +5064,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "風呂吹":["風呂吹大根"],
 "蕪村忌":["春星忌","夜半亭忌"],
 "仏手柑":["ぶしゅ柑"],
-"鰤":["寒鰤"],
+"鰤":["寒鰤","鰤網","鰤釣る","鰤場"],
 "鰤網":["鰤場"],
 "碧梧桐忌":["寒明忌"],
 "報恩講":["御正忌","御七夜","御講","御霜月","親鸞忌"],
@@ -5074,7 +5079,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "ポインセチア":["猩々木","クリスマスフラワー"],
 "鮪":["鮪船","鮪釣"],
 "ずわい蟹":["松葉蟹","越前蟹"],
-"マント":["二重廻し","トンビ","インバネス"],
+"マント":["二重廻し","とんび","インバネス"],
 "万両":["実万両"],
 "蜜柑":["蜜柑山","蜜柑狩"],
 "三島忌":["憂国忌"],
