--- a/index.html
+++ b/index.html
@@ -4333,6 +4333,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "風鈴":["江戸風鈴","南部風鈴","貝風鈴","風鈴売"],
 "蜜柑の花":["花蜜柑"],
 "南風":["南風（みなみ）","正南風（まみなみ）","海南風","大南風","南吹く"],
+"メロン":["マスクメロン","プリンスメロン","アンデスメロン","アムスメロン","夕張メロン"],
 "夕立":["ゆだち","白雨","驟雨","夕立雲","夕立風","スコール","片降"],
 "昼寝":["昼寝覚","三尺寝"],
 "冷酒":["冷し酒"],
