--- a/index.html
+++ b/index.html
@@ -1548,7 +1548,7 @@ let RAW = [
   {w:'冷麦',k:'ひやむぎ',s:'夏',p:'三夏',c:'生活'},
   {w:'冷索麺',k:'ひやそうめん',s:'夏',p:'三夏',c:'生活'},
   {w:'冷奴',k:'ひややっこ',s:'夏',p:'三夏',c:'生活'},
-  {w:'麦酒',k:'ビール',s:'夏',p:'三夏',c:'生活'},
+  {w:'麦酒',k:'びーる',s:'夏',p:'三夏',c:'生活'},
   {w:'麦茶',k:'むぎちゃ',s:'夏',p:'三夏',c:'生活'},
   {w:'ラムネ',k:'らむね',s:'夏',p:'三夏',c:'生活'},
   {w:'氷水',k:'こおりみず',s:'夏',p:'三夏',c:'生活'},
@@ -5776,7 +5776,7 @@ const PERIOD_MAP = {
 
 // BOUDAI の読み仮名を別途管理（語→読みのmap）
 // 既存データに読みがない場合は空文字
-let BOUDAI_KANA = {"春の日": {"春日": "はるび"}, "繭": {"上蔟": "あがり"}};
+let BOUDAI_KANA = {"春の日":{"春日":"はるび"}, "繭":{"上蔟":"あがり"}};
 
 function updatePeriodOptions() {
   const s = document.getElementById('fSeason').value;
