--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@ let RAW = [
   {w:'霞',k:'かすみ',s:'春',p:'三春',c:'天文'},
   {w:'陽炎',k:'かげろう',s:'春',p:'三春',c:'天文'},
   {w:'春陰',k:'しゅんいん',s:'春',p:'三春',c:'天文'},
-  {w:'春夕焼',k:'はるゆうやけ',s:'春',p:'三春',c:'天文'},
+  {w:'春夕焼',k:'はるゆうやけ／はるゆやけ',s:'春',p:'三春',c:'天文'},
   {w:'朧',k:'おぼろ',s:'春',p:'三春',c:'天文'},
   {w:'春の霙',k:'はるのみぞれ',s:'春',p:'三春',c:'天文'},
   {w:'春の霰',k:'はるのあられ',s:'春',p:'三春',c:'天文'},
@@ -1517,7 +1517,7 @@ let RAW = [
   {w:'青嵐',k:'あおあらし',s:'夏',p:'三夏',c:'天文'},
   {w:'風薫る',k:'かぜかおる',s:'夏',p:'三夏',c:'天文'},
   {w:'夏の雨',k:'なつのあめ',s:'夏',p:'三夏',c:'天文'},
-  {w:'夕立',k:'ゆうだち',s:'夏',p:'三夏',c:'天文'},
+  {w:'夕立',k:'ゆうだち／ゆだち',s:'夏',p:'三夏',c:'天文'},
   {w:'夏の霧',k:'なつのきり',s:'夏',p:'三夏',c:'天文'},
   {w:'虹',k:'にじ',s:'夏',p:'三夏',c:'天文'},
   {w:'雹',k:'ひょう',s:'夏',p:'三夏',c:'天文'},
@@ -2095,7 +2095,7 @@ let RAW = [
   {w:'炎天',k:'えんてん',s:'夏',p:'晩夏',c:'天文'},
   {w:'油照',k:'あぶらでり',s:'夏',p:'晩夏',c:'天文'},
   {w:'西日',k:'にしび',s:'夏',p:'晩夏',c:'天文'},
-  {w:'夕焼',k:'ゆうやけ',s:'夏',p:'晩夏',c:'天文'},
+  {w:'夕焼',k:'ゆうやけ／ゆやけ',s:'夏',p:'晩夏',c:'天文'},
   {w:'朝焼',k:'あさやけ',s:'夏',p:'晩夏',c:'天文'},
   {w:'風死す',k:'かぜしす',s:'夏',p:'晩夏',c:'天文'},
   {w:'送り梅雨',k:'おくりづゆ',s:'夏',p:'晩夏',c:'天文'},
@@ -2290,7 +2290,7 @@ let RAW = [
 {w:'秋曇',k:'あきぐもり',s:'秋',p:'三秋',c:'天文'},
 {w:'秋の雨',k:'あきのあめ',s:'秋',p:'三秋',c:'天文'},
 {w:'秋の虹',k:'あきのにじ',s:'秋',p:'三秋',c:'天文'},
-{w:'秋の夕焼',k:'あきのゆうやけ',s:'秋',p:'三秋',c:'天文'},
+{w:'秋夕焼',k:'あきゆうやけ／あきゆやけ',s:'秋',p:'三秋',c:'天文'},
 {w:'霧',k:'きり',s:'秋',p:'三秋',c:'天文'},
 {w:'露',k:'つゆ',s:'秋',p:'三秋',c:'天文'},
 {w:'秋色',k:'しゅうしょく',s:'秋',p:'三秋',c:'天文'},
@@ -2871,7 +2871,7 @@ let RAW = [
   {w:'雪催',k:'ゆきもよい',s:'冬',p:'三冬',c:'天文'},
   {w:'雪',k:'ゆき',s:'冬',p:'晩冬',c:'天文'},
   {w:'冬霞',k:'ふゆがすみ',s:'冬',p:'三冬',c:'天文'},
-  {w:'冬の夕焼',k:'ふゆのゆうやけ',s:'冬',p:'三冬',c:'天文'},
+  {w:'冬夕焼',k:'ふゆゆうやけ／ふゆゆやけ',s:'冬',p:'三冬',c:'天文'},
   {w:'冬の虹',k:'ふゆのにじ',s:'冬',p:'三冬',c:'天文'},
   {w:'冬旱',k:'ふゆひでり',s:'冬',p:'三冬',c:'天文'},
   {w:'冬凪',k:'ふゆなぎ',s:'冬',p:'三冬',c:'天文'},
@@ -3762,7 +3762,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "春の水":["春水","水の春"],
 "春の霙":["春霙"],
 "春の山":["春山","春嶺","弥生山","春山辺"],
-"春の夕焼":["春夕焼"],
+"春夕焼":["春茜"],
 "春の雪":["春雪","春吹雪","淡雪","沫雪","牡丹雪"],
 "春の夜":["春夜","夜半の春"],
 "春の宵":["春宵","宵の春"],
@@ -4363,7 +4363,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蜜柑の花":["花蜜柑"],
 "南風":["南風（みなみ）","正南風（まみなみ）","海南風","大南風","南吹く"],
 "メロン":["マスクメロン","プリンスメロン","アンデスメロン","アムスメロン","夕張メロン"],
-"夕立":["ゆだち","白雨","驟雨","夕立雲","夕立風","スコール","片降"],
+"夕立":["白雨","驟雨","夕立雲","夕立風","スコール","片降"],
 "昼寝":["昼寝覚","三尺寝"],
 "冷酒":["冷し酒"],
 "若葉":["谷若葉","里若葉","山若葉","若葉風","若葉雨","若葉寒","若葉冷"],
@@ -4407,7 +4407,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "秋の蛍":["秋蛍","残る蛍","病蛍"],
 "秋の水":["秋水","水の秋"],
 "秋の山":["秋山","秋嶺","秋の峰","山澄む","山の秋"],
-"秋の夕焼":["秋夕焼","秋の夕映"],
+"秋夕焼":["秋の夕映"],
 "秋の夜":["秋夜","秋の宵","夜半の秋"],
 "秋晴":["秋の晴","秋日和"],
 "秋彼岸":["後の彼岸"],
@@ -5080,7 +5080,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "冬の水":["冬の泉","寒泉"],
 "冬の靄":["冬靄","寒靄"],
 "冬の山":["冬山","枯山","雪山","冬嶺","雪嶺","冬山路","冬山家"],
-"冬の夕焼":["寒夕焼","冬茜","寒茜","寒落暉"],
+"冬夕焼":["寒夕焼","冬茜","寒茜","寒落暉"],
 "冬の夜":["夜半の冬","寒夜"],
 "冬の雷":["寒雷"],
 "冬晴":["冬日和"],
