--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@ let RAW = [
   {w:'どんたく',k:'どんたく',s:'春',p:'晩春',c:'行事'},
   {w:'都をどり',k:'みやこおどり',s:'春',p:'晩春',c:'行事'},
   {w:'鴨川をどり',k:'かもがわおどり',s:'春',p:'晩春',c:'行事'},
-  {w:'鎮花祭',k:'はなしずめまつり',s:'春',p:'晩春',c:'行事'},
+  {w:'鎮花祭',k:'はなしずめまつり／ちんかさい',s:'春',p:'晩春',c:'行事'},
   {w:'安良居祭',k:'やすらいまつり',s:'春',p:'晩春',c:'行事'},
   {w:'高山祭',k:'たかやままつり',s:'春',p:'晩春',c:'行事'},
   {w:'靖国祭',k:'やすくにまつり',s:'春',p:'晩春',c:'行事'},
