--- a/index.html
+++ b/index.html
@@ -1999,7 +1999,7 @@ let RAW = [
   // 仲夏・動物
   {w:'蛍',k:'ほたる',s:'夏',p:'仲夏',c:'動物'},
   {w:'蜻蛉生る',k:'とんぼうまる',s:'夏',p:'仲夏',c:'動物'},
-  {w:'蟷螂生る',k:'かまきりうまる',s:'夏',p:'仲夏',c:'動物'},
+  {w:'蟷螂生る',k:'とうろううまる／かまきりうまる',s:'夏',p:'仲夏',c:'動物'},
   {w:'蛇衣を脱ぐ',k:'へびきぬをぬぐ',s:'夏',p:'仲夏',c:'動物'},
   {w:'濁り鮒',k:'にごりぶな',s:'夏',p:'仲夏',c:'動物'},
   {w:'鯰',k:'なまず',s:'夏',p:'仲夏',c:'動物'},
@@ -3209,7 +3209,7 @@ let RAW = [
   {w:'亜浪忌',k:'あろうき',s:'冬',p:'初冬',c:'行事'},
   // 初冬・動物
   {w:'柳葉魚',k:'ししゃも',s:'冬',p:'初冬',c:'動物'},
-  {w:'蟷螂枯る',k:'かまきりかれる',s:'冬',p:'初冬',c:'動物'},
+  {w:'蟷螂枯る',k:'とうろうかる',s:'冬',p:'初冬',c:'動物'},
   {w:'綿虫',k:'わたむし',s:'冬',p:'初冬',c:'動物'},
   // 初冬・植物
   {w:'帰り花',k:'かえりばな',s:'冬',p:'初冬',c:'植物'},
@@ -4013,7 +4013,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蟹":["山蟹","沢蟹","川蟹","磯蟹"],
 "黴":["青黴","毛黴","麹黴","黴の宿","黴の香"],
 "兜虫":["甲虫 さいかち虫 鍬形"],
-"蟷螂生る":["蟷螂生る","子かまきり"],
+"蟷螂生る":["子かまきり"],
 "髪洗ふ":["洗ひ髪"],
 "天牛":["髪切虫","かみきり"],
 "雷":["神鳴","雷","いかづち","はたた神","雷鳴","遠雷","軽雷","落雷","雷雨","日雷"],
