--- a/index.html
+++ b/index.html
@@ -2119,7 +2119,7 @@ let RAW = [
   {w:'甚平',k:'じんべい',s:'夏',p:'晩夏',c:'生活'},
   {w:'水着',k:'みずぎ',s:'夏',p:'晩夏',c:'生活'},
   {w:'梅干す',k:'うめぼし',s:'夏',p:'晩夏',c:'生活'},
-  {w:'土用鰻',k:'どようのうなぎ',s:'夏',p:'晩夏',c:'生活'},
+  {w:'土用鰻',k:'どよううなぎ',s:'夏',p:'晩夏',c:'生活'},
   {w:'冷房',k:'れいぼう',s:'夏',p:'晩夏',c:'生活'},
   {w:'虫干',k:'むしぼし',s:'夏',p:'晩夏',c:'生活'},
   {w:'打水',k:'うちみず',s:'夏',p:'晩夏',c:'生活'},
