--- a/index.html
+++ b/index.html
@@ -3774,7 +3774,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "春竜胆":["筆竜胆","苔竜胆"],
 "榛の花":["赤楊の花"],
 "薔薇の芽":["茨の芽"],
-"バレンタインデー":["バレンタインの日","愛の日"],
+"バレンタインの日:["バレンタインデー","愛の日"],
 "東日本大震災の日":["東日本大震災忌","三月十一日"],
 "彼岸":["お彼岸","入彼岸","彼岸過ぎ","彼岸婆"],
 "彼岸会":["彼岸詣","彼岸参","彼岸寺","お中日","彼岸団子","彼岸餅"],
