--- a/index.html
+++ b/index.html
@@ -823,6 +823,7 @@ let RAW = [
   {w:'松納',k:'まつおさめ',s:'新年',p:'上新年',c:'行事'},
   {w:'飾納',k:'かざりおさめ',s:'新年',p:'上新年',c:'行事'},
   {w:'鳥総松',k:'とぶさまつ',s:'新年',p:'上新年',c:'行事'},
+  {w:'初詣',k:'はつもうで',s:'新年',p:'上新年',c:'行事'},
   {w:'宝恵駕',k:'ほえかご',s:'新年',p:'上新年',c:'行事'},
   {w:'歳徳神',k:'としとくじん',s:'新年',p:'上新年',c:'行事'},
   {w:'恵方詣',k:'えほうもうで',s:'新年',p:'上新年',c:'行事'},
@@ -867,6 +868,7 @@ let RAW = [
   {w:'弓始',k:'ゆみはじめ',s:'新年',p:'中新年',c:'行事'},
   {w:'歌会始',k:'うたかいはじめ',s:'新年',p:'中新年',c:'行事'},
   {w:'講書始',k:'こうしょはじめ',s:'新年',p:'中新年',c:'行事'},
+  {w:'餅花',k:'もちばな',s:'新年',p:'上新年',c:'行事'},
   {w:'鏡花',k:'きょうか',s:'新年',p:'中新年',c:'行事'},
   {w:'粥占',k:'かゆうら',s:'新年',p:'中新年',c:'行事'},
   {w:'粥杖',k:'かゆづえ',s:'新年',p:'中新年',c:'行事'},
@@ -5304,7 +5306,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "初日":["初陽","初旭","初日の出","初日影"],
 "初弁天":["初巳"],
 "初弥撒":["初ミサ"],
-"初詣":["初参","初社","初御籤"],
+"初詣":["初参","初社","初御籤","初神籤"],
 "初湯":["初風呂","湯殿始"],
 "初夢":["貘枕","初寝覚"],
 "初漁":["漁始","初網"],
