--- a/index.html
+++ b/index.html
@@ -863,7 +863,6 @@ let RAW = [
   {w:'成人の日',k:'せいじんのひ',s:'新年',p:'中新年',c:'行事'},
   {w:'左義長',k:'さぎちょう',s:'新年',p:'中新年',c:'行事'},
   {w:'なまはげ',k:'なまはげ',s:'新年',p:'中新年',c:'行事'},
-  {w:'初場所',k:'はつばしょ',s:'新年',p:'中新年',c:'行事'},
   {w:'弓始',k:'ゆみはじめ',s:'新年',p:'中新年',c:'行事'},
   {w:'歌会始',k:'うたかいはじめ',s:'新年',p:'中新年',c:'行事'},
   {w:'講書始',k:'こうしょはじめ',s:'新年',p:'中新年',c:'行事'},
@@ -887,7 +886,6 @@ let RAW = [
   {w:'初観音',k:'はつかんのん',s:'新年',p:'中新年',c:'行事'},
   {w:'初弥撒',k:'はつみさ',s:'新年',p:'中新年',c:'行事'},
   {w:'読初',k:'よみぞめ',s:'新年',p:'中新年',c:'生活'},
-  {w:'鏡開',k:'かがみびらき',s:'新年',p:'中新年',c:'生活'},
   {w:'蔵開',k:'くらびらき',s:'新年',p:'中新年',c:'生活'},
   {w:'鬼打木',k:'おにうちぎ',s:'新年',p:'中新年',c:'生活'},
   {w:'十五日粥',k:'じゅうごにちがゆ',s:'新年',p:'中新年',c:'生活'},
@@ -1348,7 +1346,6 @@ let RAW = [
   {w:'靖国祭',k:'やすくにまつり',s:'春',p:'晩春',c:'行事'},
   {w:'先帝祭',k:'せんていさい',s:'春',p:'晩春',c:'行事'},
   {w:'嵯峨大念仏',k:'さがだいねんぶつ',s:'春',p:'晩春',c:'行事'},
-  {w:'御影供',k:'みえいく',s:'春',p:'晩春',c:'行事'},
   {w:'聖霊会',k:'しょうりょうえ',s:'春',p:'晩春',c:'行事'},
   {w:'吉野の花会式',k:'よしののはなえしき',s:'春',p:'晩春',c:'行事'},
   {w:'御身拭',k:'おみぬぐい',s:'春',p:'晩春',c:'行事'},
@@ -2738,7 +2735,6 @@ let RAW = [
 {w:'鞍馬の火祭',k:'くらまのひまつり',s:'秋',p:'晩秋',c:'行事'},
 {w:'菊供養',k:'きくくよう',s:'秋',p:'晩秋',c:'行事'},
 {w:'去来忌',k:'きょらいき',s:'秋',p:'晩秋',c:'行事'},
-{w:'蛇笏忌',k:'だこつき',s:'秋',p:'晩秋',c:'行事'},
 {w:'高きに登る',k:'たかきにのぼる',s:'秋',p:'晩秋',c:'行事'},
 {w:'後の雛',k:'のちのひな',s:'秋',p:'晩秋',c:'行事'},
 {w:'温め酒',k:'あたためざけ',s:'秋',p:'晩秋',c:'行事'},
@@ -2979,7 +2975,7 @@ let RAW = [
   {w:'夜鷹蕎麦',k:'よたかそば',s:'冬',p:'三冬',c:'生活'},
   {w:'狸汁',k:'たぬきじる',s:'冬',p:'三冬',c:'生活'},
   {w:'納豆汁',k:'なっとうじる',s:'冬',p:'三冬',c:'生活'},
-  {w:'のっぺい汁',k:'のっぺいじる',s:'冬',p:'三冬',c:'生活'},
+  {w:'のつぺい汁',k:'のっぺいじる',s:'冬',p:'三冬',c:'生活'},
   {w:'根深汁',k:'ねぶかじる',s:'冬',p:'三冬',c:'生活'},
   {w:'蕪汁',k:'かぶらじる',s:'冬',p:'三冬',c:'生活'},
   {w:'干菜汁',k:'ほしなじる',s:'冬',p:'三冬',c:'生活'},
