--- a/index.html
+++ b/index.html
@@ -3601,6 +3601,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "沈丁花":["沈丁","丁字","瑞香","芸香"],
 "酸葉":["すかんぽ","酸模","すいすい"],
 "杉菜":["接ぎ松"],
+"杉の花":["杉花粉","花粉症"],
 "末黒の芒":["焼野の芒","黒生の芒"],
 "鈴懸の花":["プラタナスの花"],
 "雀の子":["子雀","親雀","黄雀"],
