--- a/index.html
+++ b/index.html
@@ -4287,7 +4287,7 @@ let BOUDAI_NEW = [
   {w:'貌鳥',k:'',s:'春',p:'三春',c:'動物',parent:'春の鳥',type:'boudai'},
   {w:'春の浪',k:'はるのなみ',s:'春',p:'三春',c:'地理',parent:'春の波',type:'boudai'},
   {w:'春濤',k:'しゅんとう',s:'春',p:'三春',c:'地理',parent:'春の波',type:'boudai'},
-  {w:'春怒濤',k:はるどとう'',s:'春',p:'三春',c:'地理',parent:'春の波',type:'boudai'},
+  {w:'春怒濤',k:'はるどとう',s:'春',p:'三春',c:'地理',parent:'春の波',type:'boudai'},
   {w:'春の川波',k:'はるのかわなみ',s:'春',p:'三春',c:'地理',parent:'春の波',type:'boudai'},
   {w:'初虹',k:'はつにじ',s:'春',p:'晩春',c:'天文',parent:'春の虹',type:'boudai'},
   {w:'春野',k:'はるの',s:'春',p:'三春',c:'地理',parent:'春の野',type:'boudai'},
@@ -4599,19 +4599,19 @@ let BOUDAI_NEW = [
   {w:'雪濁り',k:'',s:'春',p:'仲春',c:'地理',parent:'雪しろ',type:'boudai'},
   {w:'雪しろ水',k:'',s:'春',p:'仲春',c:'地理',parent:'雪しろ',type:'boudai'},
   {w:'雪解',k:'',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
-  {w:'雪解水',k:'',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
-  {w:'雪解川',k:'',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
-  {w:'雪解風',k:'',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
-  {w:'雪解光',k:'',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
-  {w:'雪解雫',k:'',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
-  {w:'雪解野',k:'',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
-  {w:'名残の雪',k:'',s:'春',p:'仲春',c:'天文',parent:'雪の果',type:'boudai'},
-  {w:'雪の別れ',k:'',s:'春',p:'仲春',c:'天文',parent:'雪の果',type:'boudai'},
-  {w:'別れ雪',k:'',s:'春',p:'仲春',c:'天文',parent:'雪の果',type:'boudai'},
-  {w:'忘れ雪',k:'',s:'春',p:'仲春',c:'天文',parent:'雪の果',type:'boudai'},
-  {w:'雪のひま',k:'',s:'春',p:'仲春',c:'地理',parent:'雪間',type:'boudai'},
-  {w:'雪の絶間',k:'',s:'春',p:'仲春',c:'地理',parent:'雪間',type:'boudai'},
-  {w:'雪間草',k:'',s:'春',p:'仲春',c:'地理',parent:'雪間',type:'boudai'},
+  {w:'雪解水',k:'ゆきげみず',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
+  {w:'雪解川',k:'ゆきげがわ',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
+  {w:'雪解風',k:'ゆきげかぜ',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
+  {w:'雪解光',k:'ゆきげこう',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
+  {w:'雪解雫',k:'ゆきげしずく',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
+  {w:'雪解野',k:'ゆきげの',s:'春',p:'全春',c:'時候',parent:'雪解',type:'boudai'},
+  {w:'名残の雪',k:'なごりのゆき',s:'春',p:'仲春',c:'天文',parent:'雪の果',type:'boudai'},
+  {w:'雪の別れ',k:'ゆきのわかれ',s:'春',p:'仲春',c:'天文',parent:'雪の果',type:'boudai'},
+  {w:'別れ雪',k:'わかれゆき',s:'春',p:'仲春',c:'天文',parent:'雪の果',type:'boudai'},
+  {w:'忘れ雪',k:'わすれゆき',s:'春',p:'仲春',c:'天文',parent:'雪の果',type:'boudai'},
+  {w:'雪のひま',k:'ゆきのひま',s:'春',p:'仲春',c:'地理',parent:'雪間',type:'boudai'},
+  {w:'雪の絶間',k:'ゆきのたえま',s:'春',p:'仲春',c:'地理',parent:'雪間',type:'boudai'},
+  {w:'雪間草',k:'ゆきまぐさ',s:'春',p:'仲春',c:'地理',parent:'雪間',type:'boudai'},
   {w:'小米花',k:'',s:'春',p:'仲春',c:'植物',parent:'雪柳',type:'boudai'},
   {w:'雪切',k:'',s:'春',p:'全春',c:'時候',parent:'雪割',type:'boudai'},
   {w:'洲浜草',k:'',s:'春',p:'全春',c:'時候',parent:'雪割草',type:'boudai'},
