--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ let RAW = [
   {w:'万歳',k:'まんざい',s:'新年',p:'全新年',c:'生活'},
   {w:'獅子舞',k:'ししまい',s:'新年',p:'全新年',c:'生活'},
   {w:'春着',k:'はるぎ',s:'新年',p:'全新年',c:'生活'},
-  {w:'年酒',k:'としざけ',s:'新年',p:'全新年',c:'生活'},
+  {w:'年酒',k:'としざけ／ねんしゅ',s:'新年',p:'全新年',c:'生活'},
   {w:'草石蚕',k:'ちょろぎ',s:'新年',p:'全新年',c:'生活'},
   {w:'数の子',k:'かずのこ',s:'新年',p:'全新年',c:'生活'},
   {w:'田作',k:'たづくり',s:'新年',p:'全新年',c:'生活'},
@@ -1865,6 +1865,7 @@ let RAW = [
   {w:'蛇苺',k:'へびいちご',s:'夏',p:'初夏',c:'植物'},
   {w:'夏蕨',k:'なつわらび',s:'夏',p:'初夏',c:'植物'},
   {w:'荒布',k:'あらめ',s:'夏',p:'初夏',c:'植物'},
+  {w:'酸塊の実',k:'すぐりのみ',s:'夏',p:'初夏',c:'植物'},
   // 仲夏・時候
   {w:'芒種',k:'ぼうしゅ',s:'夏',p:'仲夏',c:'時候'},
   {w:'入梅',k:'にゅうばい',s:'夏',p:'仲夏',c:'時候'},
@@ -5044,9 +5045,11 @@ let BOUDAI_NEW = [
   {w:'麹黴',k:'',parent:'黴',type:'boudai'},
   {w:'黴の宿',k:'',parent:'黴',type:'boudai'},
   {w:'黴の香',k:'',parent:'黴',type:'boudai'},
-  {w:'甲虫 さいかち虫 鍬形',k:'',parent:'兜虫',type:'boudai'},
+  {w:'甲虫',k:'',parent:'兜虫',type:'boudai'},
+  {w:'さいかち虫',k:'',parent:'兜虫',type:'boudai'},
+  {w:'鍬形',k:'',parent:'兜虫',type:'boudai'},
   {w:'子かまきり',k:'',parent:'蟷螂生る',type:'boudai'},
-  {w:'洗ひ髪',k:'',parent:'髪洗ふ',type:'boudai'},
+  {w:'洗ひ髪',k:'あらいがみ',parent:'髪洗ふ',type:'boudai'},
   {w:'髪切虫',k:'',parent:'天牛',type:'boudai'},
   {w:'かみきり',k:'',parent:'天牛',type:'boudai'},
   {w:'神鳴',k:'',parent:'雷',type:'boudai'},
@@ -5060,7 +5063,6 @@ let BOUDAI_NEW = [
   {w:'雷雨',k:'',parent:'雷',type:'boudai'},
   {w:'日雷',k:'',parent:'雷',type:'boudai'},
   {w:'銭亀',k:'',parent:'亀の子',type:'boudai'},
-  {w:'かや',k:'',parent:'蚊帳',type:'boudai'},
   {w:'枕蚊帳',k:'',parent:'蚊帳',type:'boudai'},
   {w:'母衣蚊帳',k:'',parent:'蚊帳',type:'boudai'},
   {w:'蚊遣',k:'',parent:'蚊遣火',type:'boudai'},
@@ -5881,8 +5883,8 @@ let BOUDAI_NEW = [
   {w:'潮焼',k:'',parent:'日焼',type:'boudai'},
   {w:'氷菓子',k:'',parent:'氷菓',type:'boudai'},
   {w:'アイスキャンデー',k:'あいすきゃんでー',parent:'氷菓',type:'boudai'},
-  {w:'アイスクリーム',k:'アイスクリーム',parent:'氷菓',type:'boudai'},
-  {w:'ソフトクリーム',k:'ソフトクリーム',parent:'氷菓',type:'boudai'},
+  {w:'アイスクリーム',k:'あいすくりーむ',parent:'氷菓',type:'boudai'},
+  {w:'ソフトクリーム',k:'そふとくりーむ',parent:'氷菓',type:'boudai'},
   {w:'シャーベット',k:'しゃーべっと',parent:'氷菓',type:'boudai'},
   {w:'ジェラート',k:'じぇらーと',parent:'氷菓',type:'boudai'},
   {w:'江戸風鈴',k:'',parent:'風鈴',type:'boudai'},
@@ -6417,8 +6419,6 @@ let BOUDAI_NEW = [
   {w:'秋さびし',k:'',parent:'秋思',type:'boudai'},
   {w:'傷秋',k:'',parent:'秋思',type:'boudai'},
   {w:'秋意',k:'',parent:'秋思',type:'boudai'},
-  {w:'秋の雪',k:'',parent:'秋雪',type:'boudai'},
-  {w:'秋の初雪',k:'',parent:'秋雪',type:'boudai'},
   {w:'終戦日',k:'',parent:'終戦記念日',type:'boudai'},
   {w:'敗戦日',k:'',parent:'終戦記念日',type:'boudai'},
   {w:'敗戦忌',k:'',parent:'終戦記念日',type:'boudai'},
@@ -6500,7 +6500,7 @@ let BOUDAI_NEW = [
   {w:'颱風裡',k:'',parent:'台風',type:'boudai'},
   {w:'颱風禍',k:'',parent:'台風',type:'boudai'},
   {w:'颱風の眼',k:'',parent:'台風',type:'boudai'},
-  {w:'登高',k:'',parent:'高きに登る',type:'boudai'},
+  {w:'登高',k:'とうこう',parent:'高きに登る',type:'boudai'},
   {w:'落鷹',k:'',parent:'鷹渡る',type:'boudai'},
   {w:'鷹柱',k:'',parent:'鷹渡る',type:'boudai'},
   {w:'はぐれ鷹',k:'',parent:'鷹渡る',type:'boudai'},
@@ -6530,8 +6530,6 @@ let BOUDAI_NEW = [
   {w:'洗車雨',k:'',parent:'七夕',type:'boudai'},
   {w:'種茄子',k:'',parent:'種茄子',type:'boudai'},
   {w:'花煙草',k:'',parent:'煙草の花',type:'boudai'},
-  {w:'新大豆',k:'',parent:'大豆',type:'boudai'},
-  {w:'みそ豆',k:'',parent:'大豆',type:'boudai'},
   {w:'回青燈',k:'',parent:'橙',type:'boudai'},
   {w:'かぶす',k:'',parent:'橙',type:'boudai'},
   {w:'大文字の火',k:'',parent:'大文字',type:'boudai'},
@@ -6555,29 +6553,29 @@ let BOUDAI_NEW = [
   {w:'菊酒',k:'',parent:'重陽',type:'boudai'},
   {w:'重陽の宴',k:'',parent:'重陽',type:'boudai'},
   {w:'菊の宴',k:'',parent:'重陽',type:'boudai'},
-  {w:'初月',k:'',parent:'月',type:'boudai'},
-  {w:'二日月',k:'',parent:'月',type:'boudai'},
-  {w:'三日月',k:'',parent:'月',type:'boudai'},
-  {w:'新月',k:'',parent:'月',type:'boudai'},
-  {w:'弦月',k:'',parent:'月',type:'boudai'},
-  {w:'夕月',k:'',parent:'月',type:'boudai'},
-  {w:'宵月',k:'',parent:'月',type:'boudai'},
-  {w:'夕月夜',k:'',parent:'月',type:'boudai'},
-  {w:'有明月',k:'',parent:'月',type:'boudai'},
-  {w:'昼の月',k:'',parent:'月',type:'boudai'},
-  {w:'遅月',k:'',parent:'月',type:'boudai'},
-  {w:'月白',k:'',parent:'月',type:'boudai'},
-  {w:'月夜',k:'',parent:'月',type:'boudai'},
-  {w:'月の出',k:'',parent:'月',type:'boudai'},
-  {w:'月光',k:'',parent:'月',type:'boudai'},
-  {w:'月明り',k:'',parent:'月',type:'boudai'},
-  {w:'月影',k:'',parent:'月',type:'boudai'},
-  {w:'観月',k:'',parent:'月見',type:'boudai'},
-  {w:'月祭',k:'',parent:'月見',type:'boudai'},
-  {w:'月の宴',k:'',parent:'月見',type:'boudai'},
-  {w:'月を待つ',k:'',parent:'月見',type:'boudai'},
-  {w:'月見酒',k:'',parent:'月見',type:'boudai'},
-  {w:'月見団子',k:'',parent:'月見',type:'boudai'},
+  {w:'初月',k:'はつづき',parent:'月',type:'boudai'},
+  {w:'二日月',k:'ふつかづき',parent:'月',type:'boudai'},
+  {w:'三日月',k:'みかづき',parent:'月',type:'boudai'},
+  {w:'新月',k:'しんげつ',parent:'月',type:'boudai'},
+  {w:'弦月',k:'げんげつ',parent:'月',type:'boudai'},
+  {w:'夕月',k:'ゆうづき',parent:'月',type:'boudai'},
+  {w:'宵月',k:'よいづき',parent:'月',type:'boudai'},
+  {w:'夕月夜',k:'ゆうづきよ',parent:'月',type:'boudai'},
+  {w:'有明月',k:'ありあけづき',parent:'月',type:'boudai'},
+  {w:'昼の月',k:'ひるのつき',parent:'月',type:'boudai'},
+  {w:'遅月',k:'おそづき',parent:'月',type:'boudai'},
+  {w:'月白',k:'つきしろ',parent:'月',type:'boudai'},
+  {w:'月夜',k:'つきよ',parent:'月',type:'boudai'},
+  {w:'月の出',k:'つきので',parent:'月',type:'boudai'},
+  {w:'月光',k:'げっこう',parent:'月',type:'boudai'},
+  {w:'月明り',k:'つきあかり',parent:'月',type:'boudai'},
+  {w:'月影',k:'つきかげ',parent:'月',type:'boudai'},
+  {w:'観月',k:'かんげつ',parent:'月見',type:'boudai'},
+  {w:'月祭',k:'つきまつり',parent:'月見',type:'boudai'},
+  {w:'月の宴',k:'つきのえん',parent:'月見',type:'boudai'},
+  {w:'月を待つ',k:'つきをまつ',parent:'月見',type:'boudai'},
+  {w:'月見酒',k:'つきみざけ',parent:'月見',type:'boudai'},
+  {w:'月見団子',k:'つきみだんご',parent:'月見',type:'boudai'},
   {w:'蔦かづら',k:'',parent:'蔦',type:'boudai'},
   {w:'蔦紅葉',k:'',parent:'蔦',type:'boudai'},
   {w:'錦蔦',k:'',parent:'蔦',type:'boudai'},
@@ -6635,7 +6633,7 @@ let BOUDAI_NEW = [
   {w:'有の実',k:'ありのみ',parent:'梨',type:'boudai'},
   {w:'水梨',k:'みずなし',parent:'梨',type:'boudai'},
   {w:'洋梨',k:'ようなし',parent:'梨',type:'boudai'},
-  {w:'ラフランス',k:'らふらんす',parent:'梨',type:'boudai'},
+  {w:'ラ・フランス',k:'らふらんす',parent:'梨',type:'boudai'},
   {w:'鉈豆',k:'',parent:'刀豆',type:'boudai'},
   {w:'棗',k:'',parent:'棗の実',type:'boudai'},
   {w:'川原撫子',k:'',parent:'撫子',type:'boudai'},
@@ -6954,22 +6952,22 @@ let BOUDAI_NEW = [
   {w:'吉田浅間祭',k:'',parent:'吉田火祭',type:'boudai'},
   {w:'芒祭',k:'',parent:'吉田火祭',type:'boudai'},
   {w:'火伏祭',k:'',parent:'吉田火祭',type:'boudai'},
-  {w:'長き夜',k:'',parent:'夜長',type:'boudai'},
-  {w:'夜長し',k:'',parent:'夜長',type:'boudai'},
+  {w:'長き夜',k:'ながきよ',parent:'夜長',type:'boudai'},
+  {w:'夜長し',k:'よながし／よるながし',parent:'夜長',type:'boudai'},
   {w:'夜仕事',k:'',parent:'夜なべ',type:'boudai'},
   {w:'夜業',k:'',parent:'夜なべ',type:'boudai'},
   {w:'南京豆',k:'',parent:'落花生',type:'boudai'},
   {w:'ピーナツ',k:'',parent:'落花生',type:'boudai'},
-  {w:'秋立つ',k:'',parent:'立秋',type:'boudai'},
-  {w:'秋来る',k:'',parent:'立秋',type:'boudai'},
-  {w:'秋に入る',k:'',parent:'立秋',type:'boudai'},
-  {w:'今朝の秋',k:'',parent:'立秋',type:'boudai'},
-  {w:'今日の秋',k:'',parent:'立秋',type:'boudai'},
-  {w:'流れ星',k:'',parent:'流星',type:'boudai'},
-  {w:'走り星',k:'',parent:'流星',type:'boudai'},
-  {w:'夜這星',k:'',parent:'流星',type:'boudai'},
-  {w:'星流る',k:'',parent:'流星',type:'boudai'},
-  {w:'星飛ぶ',k:'',parent:'流星',type:'boudai'},
+  {w:'秋立つ',k:'あきたつ',parent:'立秋',type:'boudai'},
+  {w:'秋来る',k:'あききたる',parent:'立秋',type:'boudai'},
+  {w:'秋に入る',k:'あきにいる',parent:'立秋',type:'boudai'},
+  {w:'今朝の秋',k:'けさのあき',parent:'立秋',type:'boudai'},
+  {w:'今日の秋',k:'きょうのあき',parent:'立秋',type:'boudai'},
+  {w:'流れ星',k:'ながれぼし',parent:'流星',type:'boudai'},
+  {w:'星走る',k:'ほしはしる',parent:'流星',type:'boudai'},
+  {w:'夜這星',k:'よばいぼし',parent:'流星',type:'boudai'},
+  {w:'星流る',k:'ほしながる',parent:'流星',type:'boudai'},
+  {w:'星飛ぶ',k:'ほしとぶ',parent:'流星',type:'boudai'},
   {w:'良宵',k:'',parent:'良夜',type:'boudai'},
   {w:'佳宵',k:'',parent:'良夜',type:'boudai'},
   {w:'紅玉',k:'',parent:'林檎',type:'boudai'},
@@ -6978,7 +6976,7 @@ let BOUDAI_NEW = [
   {w:'笹竜胆',k:'',parent:'竜胆',type:'boudai'},
   {w:'深山竜胆',k:'',parent:'竜胆',type:'boudai'},
   {w:'蔓竜胆',k:'',parent:'竜胆',type:'boudai'},
-  {w:'レモン',k:'',parent:'檸檬',type:'boudai'},
+  {w:'レモン',k:'れもん',parent:'檸檬',type:'boudai'},
   {w:'六斎',k:'',parent:'六斎念仏',type:'boudai'},
   {w:'六斎踊',k:'',parent:'六斎念仏',type:'boudai'},
   {w:'六斎太鼓',k:'',parent:'六斎念仏',type:'boudai'},
@@ -6998,9 +6996,9 @@ let BOUDAI_NEW = [
   {w:'綿摘',k:'',parent:'綿取',type:'boudai'},
   {w:'綿取る',k:'',parent:'綿取',type:'boudai'},
   {w:'綿干す',k:'',parent:'綿取',type:'boudai'},
-  {w:'鳥渡る',k:'',parent:'渡り鳥',type:'boudai'},
-  {w:'小鳥来る',k:'',parent:'渡り鳥',type:'boudai'},
-  {w:'鳥雲',k:'',parent:'渡り鳥',type:'boudai'},
+  {w:'鳥渡る',k:'とりわたる',parent:'渡り鳥',type:'boudai'},
+  {w:'小鳥来る',k:'ことりくる',parent:'渡り鳥',type:'boudai'},
+  {w:'鳥雲',k:'とりくも',parent:'渡り鳥',type:'boudai'},
   {w:'にほ',k:'',parent:'藁塚',type:'boudai'},
   {w:'吾木香',k:'',parent:'吾亦紅',type:'boudai'},
   {w:'あかがり',k:'',parent:'皸',type:'boudai'},
@@ -7052,7 +7050,8 @@ let BOUDAI_NEW = [
   {w:'落葉掻',k:'',parent:'落葉',type:'boudai'},
   {w:'落葉籠',k:'',parent:'落葉',type:'boudai'},
   {w:'落葉期',k:'',parent:'落葉',type:'boudai'},
-  {w:'寒雷忌 二十日忌',k:'',parent:'乙字忌',type:'boudai'},
+  {w:'寒雷忌',k:'',parent:'乙字忌',type:'boudai'},
+  {w:'二十日忌',k:'',parent:'乙字忌',type:'boudai'},
   {w:'関東煮',k:'',parent:'おでん',type:'boudai'},
   {w:'おでん酒',k:'',parent:'おでん',type:'boudai'},
   {w:'引上会',k:'',parent:'御取越',type:'boudai'},
@@ -7240,10 +7239,10 @@ let BOUDAI_NEW = [
   {w:'オーバーコート',k:'',parent:'外套',type:'boudai'},
   {w:'被布',k:'',parent:'外套',type:'boudai'},
   {w:'東コート',k:'',parent:'外套',type:'boudai'},
-  {w:'冬の風',k:'',parent:'北風',type:'boudai'},
-  {w:'朔風',k:'',parent:'北風',type:'boudai'},
-  {w:'寒風',k:'',parent:'北風',type:'boudai'},
-  {w:'北吹く',k:'',parent:'北風',type:'boudai'},
+  {w:'冬の風',k:'ふゆのかぜ',parent:'北風',type:'boudai'},
+  {w:'朔風',k:'さくふう',parent:'北風',type:'boudai'},
+  {w:'寒風',k:'かんぷう',parent:'北風',type:'boudai'},
+  {w:'北吹く',k:'きたふく',parent:'北風',type:'boudai'},
   {w:'北塞ぐ',k:'',parent:'北窓塞ぐ',type:'boudai'},
   {w:'鬼火',k:'',parent:'狐火',type:'boudai'},
   {w:'狐の提灯',k:'',parent:'狐火',type:'boudai'},
@@ -7257,9 +7256,12 @@ let BOUDAI_NEW = [
   {w:'鯨鍋',k:'',parent:'鯨汁',type:'boudai'},
   {w:'紅葉鍋',k:'',parent:'薬喰',type:'boudai'},
   {w:'葛晒し',k:'',parent:'葛晒す',type:'boudai'},
-  {w:'羆',k:'',parent:'熊',type:'boudai'},
-  {w:'熊の子',k:'',parent:'熊',type:'boudai'},
-  {w:'熊穴に入る',k:'',parent:'熊',type:'boudai'},
+  {w:'羆',k:'ひぐま',parent:'熊',type:'boudai'},
+  {w:'熊の子',k:'くまのこ',parent:'熊',type:'boudai'},
+  {w:'熊穴に入る',k:'くまあなにいる',parent:'熊',type:'boudai'},
+  {w:'月輪熊',k:'つきのわぐま',parent:'熊',type:'boudai'},
+  {w:'白熊',k:'しろくま',parent:'熊',type:'boudai'}, 
+  {w:'北極熊',k:'ほっきょくぐま',parent:'熊',type:'boudai'},
   {w:'穴熊狩',k:'',parent:'熊突',type:'boudai'},
   {w:'熊送り',k:'',parent:'熊祭',type:'boudai'},
   {w:'贄の熊',k:'',parent:'熊祭',type:'boudai'},
@@ -7554,7 +7556,8 @@ let BOUDAI_NEW = [
   {w:'年末手当',k:'',parent:'年末賞与',type:'boudai'},
   {w:'ボーナス',k:'',parent:'年末賞与',type:'boudai'},
   {w:'賞与',k:'',parent:'年末賞与',type:'boudai'},
-  {w:'のつぺ 濃餅汁',k:'',parent:'のっぺい汁',type:'boudai'},
+  {w:'のつぺ',k:'',parent:'のっぺい汁',type:'boudai'},
+  {w:'濃餅汁',k:'',parent:'のっぺい汁',type:'boudai'},
   {w:'スワン',k:'',parent:'白鳥',type:'boudai'},
   {w:'鵠',k:'',parent:'白鳥',type:'boudai'},
   {w:'大白鳥',k:'',parent:'白鳥',type:'boudai'},
@@ -8143,14 +8146,13 @@ let BOUDAI_NEW = [
   {w:'廻礼',k:'',parent:'年賀',type:'boudai'},
   {w:'年始廻り',k:'',parent:'年賀',type:'boudai'},
   {w:'賀詞',k:'',parent:'年賀',type:'boudai'},
-  {w:'年酒',k:'',parent:'年酒',type:'boudai'},
-  {w:'年始酒',k:'',parent:'年酒',type:'boudai'},
+  {w:'年始酒',k:'ねんしざけ',parent:'年酒',type:'boudai'},
   {w:'初能',k:'',parent:'能始',type:'boudai'},
   {w:'初乗',k:'',parent:'乗初',type:'boudai'},
-  {w:'初電車',k:'',parent:'乗初',type:'boudai'},
+  {w:'初電車',k:'はつでんしゃ',parent:'乗初',type:'boudai'},
   {w:'初車',k:'',parent:'乗初',type:'boudai'},
   {w:'船乗初',k:'',parent:'乗初',type:'boudai'},
-  {w:'初飛行',k:'',parent:'乗初',type:'boudai'},
+  {w:'初飛行',k:'はつひこう',parent:'乗初',type:'boudai'},
   {w:'初帚',k:'',parent:'掃初',type:'boudai'},
   {w:'初掃除',k:'',parent:'掃初',type:'boudai'},
   {w:'胡鬼板',k:'',parent:'羽子板',type:'boudai'},
@@ -8230,7 +8232,6 @@ let BOUDAI_NEW = [
   {w:'初日の出',k:'',parent:'初日',type:'boudai'},
   {w:'初日影',k:'',parent:'初日',type:'boudai'},
   {w:'初巳',k:'',parent:'初弁天',type:'boudai'},
-  {w:'初ミサ',k:'',parent:'初弥撒',type:'boudai'},
   {w:'初参',k:'',parent:'初詣',type:'boudai'},
   {w:'初社',k:'',parent:'初詣',type:'boudai'},
   {w:'初御籤',k:'',parent:'初詣',type:'boudai'},
@@ -8255,8 +8256,6 @@ let BOUDAI_NEW = [
   {w:'春駒万歳',k:'',parent:'春駒',type:'boudai'},
   {w:'初弾',k:'',parent:'弾初',type:'boudai'},
   {w:'琴始',k:'',parent:'弾初',type:'boudai'},
-  {w:'姫始',k:'',parent:'ひめ始',type:'boudai'},
-  {w:'密事始',k:'',parent:'ひめ始',type:'boudai'},
   {w:'籟初',k:'',parent:'吹初',type:'boudai'},
   {w:'吹始',k:'',parent:'吹初',type:'boudai'},
   {w:'元日草',k:'',parent:'福寿草',type:'boudai'},
@@ -8273,10 +8272,10 @@ let BOUDAI_NEW = [
   {w:'蓬莱飾',k:'',parent:'蓬莱',type:'boudai'},
   {w:'宝恵駕',k:'',parent:'宝恵籠',type:'boudai'},
   {w:'戎籠',k:'',parent:'宝恵籠',type:'boudai'},
-  {w:'ホットレモン',k:'',parent:'ホットドリンクス',type:'boudai'},
-  {w:'ホットワイン',k:'',parent:'ホットドリンクス',type:'boudai'},
-  {w:'ホットウイスキー',k:'',parent:'ホットドリンクス',type:'boudai'},
-  {w:'ホットココア',k:'',parent:'ホットドリンクス',type:'boudai'},
+  {w:'ホットレモン',k:'ほっとれもん',parent:'ホットドリンクス',type:'boudai'},
+  {w:'ホットワイン',k:'ほっとわいん',parent:'ホットドリンクス',type:'boudai'},
+  {w:'ホットウイスキー',k:'ほっとういすきー',parent:'ホットドリンクス',type:'boudai'},
+  {w:'ホットココア',k:'ほっとここあ',parent:'ホットドリンクス',type:'boudai'},
   {w:'田平子',k:'',parent:'仏の座',type:'boudai'},
   {w:'梵天',k:'',parent:'ぼんでん',type:'boudai'},
   {w:'ぽこんぽこん',k:'',parent:'ぽつぺん',type:'boudai'},
